...
            <point key="canvasLocation" x="2578" y="-994"/>
        </scene>
        <!--About-->
        <scene sceneID="8a8-g1-nu0">
            <objects>
                <navigationController id="zvX-Qg-yY8" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="About" image="AboutTabIcon" id="nff-Ie-ldv"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0lF-kr-m7A">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="j8n-Qh-gjC" kind="relationship" relationship="rootViewController" id="htn-Nb-BHA"/>
...
            </objects>
            <point key="canvasLocation" x="1734" y="-2556"/>
        </scene>
        <!--Jobs-->
        <scene sceneID="L8Q-cp-McQ">
            <objects>
                <collectionViewController storyboardIdentifier="jobsViewController" id="p5z-Di-RAg" userLabel="Jobs" customClass="JobsViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Rjy-ez-TrW">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="KTF-6H-c5v">
                            <size key="itemSize" width="140" height="100"/>
...
